-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 6.0.1
-
-
ab5fdd94f3 (qt-creator/qt-creator/7.0) ab5fdd94f3 (qt-creator/qt-creator/master) ab5fdd94f3 (qt-creator/tqtc-qt-creator/7.0) ab5fdd94f3 (qt-creator/tqtc-qt-creator/master) ab5fdd94f3 (qt-creator/tqtc-qt-creator/qds-3.1)
Steps to reproduce:
- Choose New/Widget application
- Turn off "Generate form" in Class info page
- Header looks like below:
#ifndef MAINWINDOW_H #define MAINWINDOW_H #include <QMainWindow> class MainWindow : public QMainWindow { Q_OBJECT public: MainWindow(QWidget *parent = nullptr); ~MainWindow(); }; #endif // MAINWINDOW_H
- Also, it seems that Select All, Ctrl I does not fix it.
For Gerrit Dashboard: QTCREATORBUG-26776 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
389383,10 | [ClangFormat] Add test checkking indentation after Q_OBJECT | 7.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
395136,1 | [ClangFormat] Add test checkking indentation after Q_OBJECT | master | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |